--- a/assets/sass/base/_colors.scss
+++ b/assets/sass/base/_colors.scss
@@ -6,10 +6,14 @@ $colors: (
  'blue': (
    base: #0069AA,
    light: #76D8FF,
+   med: #174A82,
    dark: #051C35,
    trans: transparentize(#0069AA, .7),
    trans-light: transparentize(#76D8FF, .7),
    trans-dark: transparentize(#051C35, .7),
+ ),
+ 'beige': (
+   base: #F7F4ED,
  ),
  'gold': (
    base: #825B17,
@@ -44,6 +48,8 @@ $colors: (
    linkedin: #007bb5
  )
 );
+
+$bgcolor: color('beige', 'base');
 
 @function color($color-name, $tone: base) {
     @return map-get(map-get($colors, $color-name), $tone);
