--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -51,8 +51,8 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #1779ba,
-  secondary: #767676,
+  primary: color('blue', 'base'),
+  secondary: color('gold', 'base'),
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
