added icon font, topbar right done

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -5,12 +5,16 @@ p {
 	margin: 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+	text-transform: uppercase;
+}
+
 h1 {
 	font-size: 2rem;
-	font-weight: 700;
+	// font-weight: 700;
 }
 
 h2 {
 	font-size: 1.25rem;
-	font-weight: 700;
+	// font-weight: 700;
 }
