output most info on single event temlate

--- a/assets/sass/_shame.scss
+++ b/assets/sass/_shame.scss
@@ -1,3 +1,13 @@
 body {
 	position: inherit; // Fixed the admin bar
 }
+
+// .mro-event {
+// 	border: 1px solid $light-gray;
+// 	margin-bottom: 2rem;
+// 	padding: 1rem;
+// }
+
+.module-title {
+	font-size: 1rem;
+}
