--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -10,11 +10,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	font-size: 2rem;
+	// font-size: 2rem;
 	// font-weight: 700;
 }
 
 h2 {
-	font-size: 1.25rem;
+	// font-size: 1.25rem;
 	// font-weight: 700;
 }
