--- a/assets/sass/components/_block-links.scss
+++ b/assets/sass/components/_block-links.scss
@@ -3,6 +3,7 @@
 		position: relative;
 		background-size: cover;
 		margin-bottom: 0;
+
 		&:first-child {
 			background-image: url(../img/home-links-classes.jpg);
 
@@ -21,9 +22,22 @@
 
 	.block-link {
 		color: $white;
-		display: block;
-		padding: 1rem;
+		padding: 2rem 1rem;
 		text-align: center;
+		min-height: 160px;
+
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		@include breakpoint(medium) {
+			padding: 2.5rem 2rem;
+		}
+
+		@include breakpoint(large) {
+			padding: 1.5rem 2rem;
+			min-height: 220px;
+		}
 	}
 
 	#block-link-classes {
