--- a/assets/sass/components/_spotlight.scss
+++ b/assets/sass/components/_spotlight.scss
@@ -10,6 +10,6 @@
 }
 
 .spotlight-text {
-	background-color: color('blue', 'light');
+	background: url(../img/mandala.png) top center no-repeat;
 	padding: 1rem;
 }
