--- a/assets/sass/pages/_page.scss
+++ b/assets/sass/pages/_page.scss
@@ -1,5 +1,12 @@
 #content {
-	margin: 2rem 0;
+	margin: 0;
+}
+
+.page-section {
+	@include vertical-padding;
+	.home & {
+		text-align: center;
+	}
 }
 
 .entry-meta {
