--- a/assets/sass/base/_colors.scss
+++ b/assets/sass/base/_colors.scss
@@ -5,7 +5,7 @@
 $colors: (
  'blue': (
    base: #0069AA,
-   light: #76D8FF,
+   light: #86D6FF,//#76D8FF,
    med: #174A82,
    dark: #051C35,
    trans: transparentize(#0069AA, .35),
