--- a/assets/sass/base/_colors.scss
+++ b/assets/sass/base/_colors.scss
@@ -60,3 +60,6 @@ $bgcolor: color('beige', 'base');
 //   color: color('grey', 'dark');
 // }
 
+$topbar-bg: color('blue', 'base');
+$topbar-bg-hover: color('blue', 'med');
+$topbar-toplevel-bg: color('blue', 'dark');
