fixedd up page intro

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -41,7 +41,12 @@ h2 {
 .section-title {
 	@include main-headings;
 	text-align: center;
+	&:only-child {
+		margin-bottom: 0;
+	}
 }
+
+
 
 
 .cta {
