events mostly done

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -46,6 +46,15 @@ h2 {
 	}
 }
 
+.event-title {
+	@include breakpoint(medium) {
+		font-size: header-size(medium, h4);
+
+		#events-calendar & {
+			font-size: header-size(medium, h5);
+		}
+	}
+}
 
 
 
