modal schedule style

--- a/assets/sass/components/_components.scss
+++ b/assets/sass/components/_components.scss
@@ -2,6 +2,7 @@
 @import "announcement-bar";
 @import "offcanvas";
 @import "hero";
+@import "schedule";
 @import "svg";
 @import "spotlight";
 @import "block-links";
