prices style start

--- a/assets/sass/components/_components.scss
+++ b/assets/sass/components/_components.scss
@@ -3,6 +3,7 @@
 @import "offcanvas";
 @import "hero";
 @import "schedule";
+@import "prices";
 @import "svg";
 @import "spotlight";
 @import "block-links";
