redid pricing, styled

--- a/assets/sass/components/_prices.scss
+++ b/assets/sass/components/_prices.scss
@@ -1,37 +1,47 @@
+.pricing {
+	h3,h4 {
+		font-size: header-size(small, h3);
+	}
+}
+
 .price-list,
 .price-list ul {
 	list-style: none;
-	margin-left: 0;
-	margin-top: 1rem;
 }
 
-.price-list {
-	h3,h4 {
-		font-size: header-size(small, h4);
-	}
-	li {
-		margin-bottom: 1rem;
-	}
-	> li > ul > li {
-		margin-top: 2rem;
+
+.price-info {
+	@extend .callout;
+	border: 0;
+	background-color: $bgcolor;
+	text-align: center;
+	&.special {
+		background-color: color('blue', 'light');
 	}
 
-	.price-info {
-		@extend .callout;
-		border: 0;
-		background-color: $bgcolor;
-		text-align: center;
-		&.special {
-			background-color: color('blue', 'light');
+	span {
+		display: block;
+		&.price {
+			font-size: 1.5rem;
+			font-family: $header-font-family;
 		}
+	}
+}
 
-		span {
-			display: block;
-			&.price {
-				font-size: 1.5rem;
-				font-family: $header-font-family;
+@include breakpoint(small only) {
+	.pricing-nav {
+		.menu {
+			li {
+				display: block;
 			}
 		}
 	}
+}
 
+@include breakpoint(medium) {
+	.pricing {
+		h3,h4 {
+			font-size: header-size(medium, h4);
+		}
+	}
 }
