--- a/assets/sass/sections/_sidebar.scss
+++ b/assets/sass/sections/_sidebar.scss
@@ -1,4 +1,10 @@
-#secondary h1 {
-	font-size: 1.5rem;
-	font-weight: 700;
+#secondary {
+	border: 1px solid $light-gray;
+	margin-bottom: $global-margin*2;
+	padding: $global-margin;
+
+	h1 {
+		font-size: 1.5rem;
+		font-weight: 700;
+	}
 }
