--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -55,6 +55,12 @@ h2 {
 			font-size: header-size(small, h6);
 		}
 	}
+	&.quick-info h3 {
+		text-transform: initial;
+		font-family: $body-font-family;
+		font-weight: 700;
+		font-size: 16px;
+	}
 }
 
 
