--- a/assets/sass/base/_mixins.scss
+++ b/assets/sass/base/_mixins.scss
@@ -14,6 +14,11 @@
 	}
 }
 
+@mixin reset-list {
+	list-style: none;
+	margin-left: 0;
+}
+
 @mixin object-fit {
 	/* For browsers that support 'object-fit' */
 	@supports ( object-fit: cover ) {
