--- a/assets/sass/sections/_sidebar.scss
+++ b/assets/sass/sections/_sidebar.scss
@@ -1,7 +1,7 @@
 #secondary {
 	border: 1px solid $light-gray;
 	margin-bottom: $global-margin*2;
-	padding: $global-margin;
+	padding: $global-margin/2;
 
 	.sidebar-section,
 	.widget {
@@ -10,9 +10,38 @@
 
 	}
 
-	// h1 {
-	// 	font-size: 1.5rem;
-	// 	font-weight: 700;
-	// }
+	@include breakpoint(medium) {
+		padding: $global-margin;
+	}
 }
 
+.sidebar-heading {
+	margin-top: .5rem;
+	text-align: center;
+}
+
+.quick-info .sidebar-section {
+	h3 {
+		float: left;
+		text-align: right;
+		width: 100px;
+		margin-top: 2px;
+	}
+	> p, > ul, > ol {
+		margin-left: 116px;
+	}
+	> ul {
+		list-style: none;
+		> li { 
+
+		}
+		ul {
+			@include reset-list;
+			margin-bottom: 1rem; 
+		}
+	}
+}
+
+.discount {
+	@extend .label;
+}
