last p in announcement bar no margin bottom

--- a/assets/sass/components/_announcement-bar.scss
+++ b/assets/sass/components/_announcement-bar.scss
@@ -4,4 +4,10 @@
 	color: $white;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
+
+	.sap_message {
+		p:last-child {
+			margin-bottom: 0;
+		}
+	}
 }
