--- a/assets/sass/components/_spotlight.scss
+++ b/assets/sass/components/_spotlight.scss
@@ -24,6 +24,10 @@
 		margin: 1rem 0 1.5rem;
 	}
 
+	ul, ol {
+		text-align: left;
+	}
+
 	@include breakpoint(medium) {
 		background-image: url(../img/mandala-medium.png);
 	}
