bulk pricing slider and info done

--- a/assets/sass/pages/_store.scss
+++ b/assets/sass/pages/_store.scss
@@ -9,6 +9,14 @@
 	}
 }
 
+.product-pricing {
+	@include vertical-padding($top: 0);
+
+	.slider {
+		margin-top:3rem;
+	}
+}
+
 #bulk-price {
 	text-align: center;
 }
