--- a/assets/sass/sections/_sidebar.scss
+++ b/assets/sass/sections/_sidebar.scss
@@ -1,4 +1,6 @@
-#secondary {
+#secondary,
+.sidebar-form {
+
 	border: 1px solid $light-gray;
 	margin-bottom: $global-margin*2;
 	padding: $global-margin/2;
