--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -13,7 +13,8 @@
 
 }
 
-#secondary {
+#secondary,
+.sidebar-form {
 	@include breakpoint(medium) {
 		font-size: 16px;
 	}
@@ -34,7 +35,8 @@ h2 {
 	// font-weight: 700;
 }
 
-#secondary {
+#secondary,
+.sidebar-form {
 	@include breakpoint(medium) {
 		h1 {
 			font-size: header-size(small, h1);
