--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -89,7 +89,7 @@ $breakpoints: (
   wp-admin-bar: 782px,
 );
 $print-breakpoint: large;
-$breakpoint-classes: (small medium large);
+$breakpoint-classes: (small medium large xlarge);
 
 // 3. The Grid
 // -----------
