--- a/assets/sass/pages/_page.scss
+++ b/assets/sass/pages/_page.scss
@@ -2,7 +2,8 @@
 	body:not(.home) & {
 		@include vertical-padding;
 	}
-	body.page-template-template-store & {
+	body.page-template-template-store &,
+	body.page-template-template-featured-product & {
 		@include vertical-padding($bottom: 0);
 	}
 }
