--- a/assets/sass/base/_mixins.scss
+++ b/assets/sass/base/_mixins.scss
@@ -14,6 +14,11 @@
 	}
 }
 
+@mixin square($size) {
+	width: $size;
+	height: $size;
+}
+
 @mixin rounded($radius: 0.5em) {
   // -webkit-border-radius: $radius; 
   // -moz-border-radius: $radius;
