--- a/assets/sass/pages/_team.scss
+++ b/assets/sass/pages/_team.scss
@@ -7,10 +7,22 @@
 	.profile-image-secondary {
 		margin: 0 auto;
 	}
-	.profile-image + .entry-title {
-		@include vertical-padding($bottom:0);
+	.profile-image {
+		@include square(200px);
+		img {
+			@include object-fit;
+		}
+		+ .entry-title {
+			@include vertical-padding($bottom:0);
+		}
 	}
 	.profile-image-secondary {
 		@include vertical-padding($bottom:0);
+	}
+
+	@include breakpoint(medium) {
+		.profile-image {
+			@include square(300px);
+		}
 	}
 }
