--- a/assets/sass/pages/_team.scss
+++ b/assets/sass/pages/_team.scss
@@ -17,7 +17,7 @@
 		}
 	}
 	.profile-image-secondary {
-		@include vertical-padding($bottom:0);
+		@include vertical-padding($top:$vertical-spacing/4, $bottom:0);
 	}
 
 	@include breakpoint(medium) {
