--- a/assets/sass/components/_topbar.scss
+++ b/assets/sass/components/_topbar.scss
@@ -15,7 +15,7 @@
 		width: auto;
 		a {
 			color: $white;
-			font-weight: bold;
+			// font-weight: bold;
 			transition: $button-transition;
 			@include hover {
 				background-color: $topbar-bg-hover;
