--- a/assets/sass/_shame.scss
+++ b/assets/sass/_shame.scss
@@ -15,3 +15,17 @@ body {
 #info-bar {
 	display: none;
 }
+
+//TRAINING TYPE
+.entry-content {
+	h2 {
+		font-size:24px;
+	}
+	ul ,
+	ol ,
+	p {
+		+ h2 {
+			margin-top: 2rem;
+		}
+	}
+}
