teachers list style: v spacing and link color

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -83,6 +83,12 @@ h2 {
 	&:only-child {
 		margin-bottom: 0;
 	}
+	a {
+		color: $body-font-color;
+		@include hover {
+			color: $anchor-color-hover;
+		}
+	}
 }
 
 .event-title {
